# DDD-sample

./: .gitignore  pyproject.toml  storm.txt
src/: main.py
src/cache/: redis.py
src/config/: settings.py
src/database/: models.py  postgres.py
src/dependencies/: main.py  registrator.py
src/domain_exceptions/: book_is_loaned_exception.py
src/events/book/: book_returned.py
src/events/loan/: LoanCreated.py
src/models/: base.py  book.py  loan.py  user.py
src/services/domain_service/: loan_service.py
src/value_objects/: book_esdn.py  title.py
